add content and footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <h1>Hello World</h1>
+        <section>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. In minus eveniet ullam dolor nemo temporibus tenetur repellendus nulla itaque, aspernatur maxime, voluptatum cupiditate aliquam?</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti saepe dicta consequatur dolorum alias sequi dolores, tempora magni deserunt repellat a, earum architecto, perferendis in asperiores consequuntur quibusdam sit at iste optio error?</p>
+        </section>
+        <section>
+            <div>1</div>
+            <div>2</div>
+        </section>
+    </header>
+    
+    <footer>
+        &copy; Copyright
+    </footer>
 </body>
 </html>
