--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas corrupti saepe dicta consequatur dolorum alias sequi dolores, tempora magni deserunt repellat a, earum architecto, perferendis in asperiores consequuntur quibusdam sit at iste optio error?</p>
         </section>
         <section>
-            <div>1</div>
-            <div>2</div>
+            <div class="grid">
+                <div class="image"><img src="#" alt="ksdhfjs"></div>
+                <div class="image"><img src="#" alt="ksdhfjs"></div>
+                <div class="image"><img src="#" alt="ksdhfjs"></div>
+                <div class="image"><img src="#" alt="ksdhfjs"></div>
+                <div class="image"><img src="#" alt="ksdhfjs"></div>
+                <div class="image"><img src="#" alt="ksdhfjs"></div>
+                <div class="image"><img src="#" alt="ksdhfjs"></div>
+                <div class="image"><img src="#" alt="ksdhfjs"></div>
+            </div>
         </section>
     </header>
     
